--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "heroku-postbuild": "ionic build"
+    "heroku-postbuild": "npm install; ionic build"
   },
   "private": true,
   "dependencies": {
