--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    // "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "heroku-postbuild": "ng build"
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
