--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
@@ -25,13 +26,15 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.3",
     "@capacitor/status-bar": "1.0.8",
-    "@ionic/angular": "^6.1.9",
-    "@angular/cli": "^14.0.0",
+    "@ionic/angular": "^6.2.2",
+    "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/cli": "^6.20.1",
+    "ionic": "^4.1.2",
+    "node": "^16.17.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
     "typescript": "~4.7.3",
-    "@ionic/angular-toolkit": "^6.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
