--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "private": true,
   "dependencies": {
     "@angular/cli": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
